@@ -7,6 +7,7 @@ SVN
 - Major code cleanup in measure handling code
 - Fixed improper handling of accidentals
 - Fixed default suggested name when exporting to PDF on mac OS X
+- Added DropD-bass tuning preset, cleaned up code
 - Improved printing output by putting a bigger centered title on first page.
 - More automatic memory management, improved leak checks
 - Fixed memory leaks
